# oss-cleaner

./: .gitignore  README.md  README_EN.md  pyproject.toml
.github/workflows/: publish.yml
src/oss_cleaner/: __main__.py  app.py  config_manager.py
src/oss_cleaner/templates/: index.html
src/oss_images_manager/: app.py  config_manager.py
src/oss_images_manager/templates/: index.html
