[build-system]
requires = ["hatchling", "setuptools-scm"]
build-backend = "hatchling.build"

[project]
name = "oss-images-manager"
dynamic = ["version"]
description = "Manage and clean orphaned images stored in Aliyun OSS for Obsidian vaults."
requires-python = ">=3.8"
dependencies = [
  "flask>=2.3",
  "oss2>=2.18"
]

[tool.hatch.build.targets.wheel]
packages = ["src/oss_images_manager"]
include = [
  "src/oss_images_manager/templates/**"
]

[tool.hatch.build.targets.sdist]
include = [
  "src/oss_images_manager"
]

[tool.hatch.version]
path = "src/oss_images_manager/_version.py"

[tool.setuptools_scm]
write_to = "src/oss_images_manager/_version.py"

