[build-system]
requires = ["hatchling", "setuptools-scm"]
build-backend = "hatchling.build"

[project]
name = "oss-cleaner"
dynamic = ["version"]
description = "Manage and clean orphaned images stored in Aliyun OSS for Markdown projects."
requires-python = ">=3.8"
dependencies = [
  "flask>=2.3",
  "oss2>=2.18"
]

[tool.hatch.build.targets.wheel]
packages = ["src/oss_cleaner"]
include = [
  "src/oss_cleaner/templates/**"
]

[tool.hatch.build.targets.sdist]
include = [
  "src/oss_cleaner"
]

[tool.hatch.version]
path = "src/oss_cleaner/_version.py"

[tool.setuptools_scm]
write_to = "src/oss_cleaner/_version.py"

